--- a/requirements.txt
+++ b/requirements.txt
@@ -7,3 +7,7 @@ scikit-learn==1.1.3
 mltu==0.1.4
 opencv-python==4.6.0.66
 tqdm==4.64.1
+ipykernel==6.15.2
+bs4==0.0.1
+beautifulsoup4==4.11.1
+requests==2.28.1
