--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,12 @@
-tensorflow==2.10.0
-keras==2.10.0
-numpy==1.23.5
-matplotlib==3.6.2
-Pillow==9.3.0
-scikit-learn==1.1.3
-mltu==0.1.4
-opencv-python==4.6.0.66
-tqdm==4.64.1
-ipykernel==6.15.2
-bs4==0.0.1
-beautifulsoup4==4.11.1
-requests==2.28.1
+streamlit
+tensorflow
+opencv-python-headless
+numpy
+matplotlib
+requests
+beautifulsoup4
+keras-tuner
+scikit-learn
+seaborn
+plotly
+tqdm
