Refactor code structure for improved readability and maintainability

--- a/.gitignore
+++ b/.gitignore
@@ -15,9 +15,9 @@ captcha_reading.ipynb
 preprocess.py
 preprocess_2.py
 model_train.py
-*.png
-*.jpeg
-*.jpg 
+# *.png
+# *.jpeg
+# *.jpg 
 *bg*
 *try*
 *test*
