Enhance UI and functionality: add fun facts rotation, improve layout consistency, and log training experiments

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,13 @@
-streamlit
-tensorflow
-opencv-python-headless
-numpy
-matplotlib
-requests
-beautifulsoup4
-keras-tuner
-scikit-learn
-seaborn
-plotly
-tqdm
+beautifulsoup4==4.14.2
+ipykernel==6.31.0
+jaraco.collections==5.1.0
+keras-tuner==1.4.8
+opencv-python-headless==4.12.0.88
+pip-chill==1.0.3
+plotly==6.5.0
+scikit-learn==1.6.1
+seaborn==0.13.2
+streamlit==1.50.0
+tensorflow==2.20.0
+tomli==2.0.1
+tqdm==4.67.1
